--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
