--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4",
     "uuid": "^9.0.0",
